2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* global.h:
	Add a prop_dialog entry to the MultiloadApplet
	struct.

	* main.c (multiload_applet_new): Set prop_dialog
	to NULL.

	(multiload_destroy_cb): Destroy prop_dialog
	if it's present.

	* properties.c (multiload_properties_cb):
	Use the dialog from the instance struct
	so it doesn't get shared between instances.

	Check if the dialog is there, if so present
	and set the right screen.

	* properties.h: Removed some unused extern
	vars that weren't actually there anymore.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (about_cb): Set the screen right if the user
	requests the about dialog and it's already there but
	not on the right screen.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (start_procman):
	Moved from egg_screen_execute_command_line_async to
	gdk_spawn_command_line_on_screen.

	Fixes bug #135158.

2004-02-19  Kevin Vandersloot
	
	* linux-proc.c: BSD support. Patch from some unknown BSD hacker. Fixes bug
	#97003

2004-02-09 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/multiload.xml: Implemented peer review comments
	* docs/C/multiload-C.omf: Updated date

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>
	
	* main.c (about_cb): Added documenter credits.

2004-02-05  Dennis Smit  <ds@nerds-incorporated.org>
	
	* Makefile.am: added docs to the SUBDIRS list so they get installed.
	
	Applied Patch by Alexander Winston <alexander.winston@comcast.net> 
	to add an help button for the applet context menu.

	Fixes bug #87496

2004-01-31  Archana Shah  <archana.shah@wipro.com>

	* global.h: Added a field in structure MultiloadApplet for
	about dialog.
	* main.c: (multiload_applet_new): Initialized about_dialog with NULL.
	(about_cb): Changed to use about_dialog member field instead of
	static variable.